name:                coolnoise
version:             0.1.0.0
synopsis:            Parser and generator for programs written in the Classroom Object-Oriented Language.
description:         Please see README.md
homepage:            https://github.com/hucal/coolnoise
license:             BSD3
license-file:        LICENSE
author:              Hugo Rivera
maintainer:          hugo.rivera2319 at gmail.com
copyright:           2016 Hugo Rivera
category:            Languages
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Types
                       Generate
                       Parse
  build-depends:       base >= 4.7 && < 5,
                       -- alex >= 3 && < 4,
                       semigroups >= 0.18 && < 0.20,
                       megaparsec >= 5 && < 6,
                       attoparsec >= 0.13 && < 0.14
  default-language:    Haskell2010

executable coolnoise-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , coolnoise
  default-language:    Haskell2010

test-suite coolnoise-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , coolnoise
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/hucal/coolnoise
