name:                coolnoise
version:             0.1.0.0
synopsis:            Parser and generator for programs written in the Classroom Object-Oriented Language.
description:         Please see README.md
homepage:            https://github.com/hucal/coolnoise
license:             BSD3
license-file:        LICENSE
author:              Hugo Rivera
maintainer:          hugo.rivera2319 at gmail.com
copyright:           2016 Hugo Rivera
category:            Languages
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Cool.Types
                       Cool.Lex
                       Cool.Parse
                       Cool.Generate
  build-depends:       base >= 4.7 && < 5
                     , bytestring >= 0.10 && < 0.20
                     --, alex >= 3 && < 4
                     , megaparsec >= 4.4 && < 6
                     , attoparsec >= 0.12 && < 0.14
                     , abstract-par >= 0.3.3 && < 0.4
  default-language:    Haskell2010

executable coolnoise-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , optparse-applicative >= 0.10 && < 0.20
                     , coolnoise
  default-language:    Haskell2010

test-suite coolnoise-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , optparse-applicative >= 0.10 && < 0.20
                     , coolnoise
  ghc-options:         -O -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

executable bench-cli
  hs-source-dirs:      benchmark
  main-is:             Main.hs 
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , optparse-applicative >= 0.10 && < 0.20
                     , process >= 1.2 && < 1.5
                     , criterion >= 1.1 && < 1.2
                     , coolnoise
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/hucal/coolnoise
